--- a/subconverter/WesternDigital.ini
+++ b/subconverter/WesternDigital.ini
@@ -191,6 +191,8 @@ rename_node=Taiwan@台湾
 rename_node=India@印度
 rename_node=Turkey@土耳其
 rename_node=Australia@澳大利亚
+rename_node=Germany@德国
+rename_node=Korea@韩国
 rename_node=\|\s
 rename_node=!!GROUPID=0!!^(.*)@WD｜$1
 
