--- a/subconverter/Heureka.ini
+++ b/subconverter/Heureka.ini
@@ -185,6 +185,7 @@ rename_node= Singapore@新加坡
 rename_node= Los Angeles@美国
 rename_node= Tokyo@日本
 rename_node=Guangzhou@广州
+rename_node= San Jose@美国
 rename_node=Dongguan@东莞
 rename_node= Taipei@台北
 rename_node=\ ⚡️ 
