--- a/Surge/Surge.conf
+++ b/Surge/Surge.conf
@@ -88,7 +88,7 @@ use-default-policy-if-wifi-not-primary = false
 // doh-format=json
 // dns-server = https://neatdns.ustclug.org/resolve
 dns-server = 119.29.29.29, 223.5.5.5, 223.6.6.6, 180.76.76.76, system
-// doh-server = https://47.108.56.233/dns-query, https://118.31.13.131/dns-query, https://120.25.25.166/dns-query, https://139.224.112.177/dns-query, https://59.110.53.209/dns-query, https://doh.rixcloud.dev/dns-query
+// doh-server = https://47.108.56.233/dns-query, https://118.31.13.131/dns-query, https://120.25.25.166/dns-query, https://139.224.112.177/dns-query, https://59.110.53.209/dns-query
 
 # 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
