--- a/subconverter/Texon.ini
+++ b/subconverter/Texon.ini
@@ -193,6 +193,7 @@ rename_node=辣蟹
 rename_node=鯛魚燒
 rename_node=河豚生
 rename_node=烏賊燒
+rename_node=壽喜燒
 rename_node=甜甜圈
 rename_node=鱈魚柳
 rename_node=!!GROUPID=0!!^(.*)@Tex｜$1
