--- a/subconverter/WestData.ini
+++ b/subconverter/WestData.ini
@@ -190,6 +190,7 @@ rename_node=Taiwan@台湾
 rename_node=India@印度
 rename_node=Turkey@土耳其
 rename_node=Australia@澳大利亚
+rename_node=Israel@以色列
 rename_node=Germany@德国
 rename_node=Korea@韩国
 rename_node=\|\s
