--- a/Clash/Proxy/Router.yaml
+++ b/Clash/Proxy/Router.yaml
@@ -1,5 +1,7 @@
 proxies:
-  - {name: MacOS-Http, server: MacOS.Router, port: 1080, type: http}
-  - {name: MacOS-Socks, server: MacOS.Router, port: 1090, type: socks5}
-  - {name: N1-Http, server: N1.Router, port: 1080, type: http}
-  - {name: N1-Socks, server: N1.Router, port: 1080, type: socks5}
+  - {name: MacOS-Http, server: surge.server, port: 1080, type: http}
+  - {name: MacOS-Socks, server: surge.server, port: 1090, type: socks5}
+  - {name: MacOS-Http, server: MacOS.server, port: 1080, type: http}
+  - {name: MacOS-Socks, server: MacOS.server, port: 1090, type: socks5}
+  - {name: op-Http, server: op.server, port: 1080, type: http}
+  - {name: op-Socks, server: op.Router, port: 1080, type: socks5}
