--- a/Clash/Proxy/Router.yaml
+++ b/Clash/Proxy/Router.yaml
@@ -1,6 +1,6 @@
 proxies:
-  - {name: MacOS-Http, server: surge.server, port: 1080, type: http}
-  - {name: MacOS-Socks, server: surge.server, port: 1090, type: socks5}
+  - {name: Surge-Http, server: surge.server, port: 1080, type: http}
+  - {name: Surge-Socks, server: surge.server, port: 1090, type: socks5}
   - {name: MacOS-Http, server: MacOS.server, port: 1080, type: http}
   - {name: MacOS-Socks, server: MacOS.server, port: 1090, type: socks5}
   - {name: op-Http, server: op.server, port: 1080, type: http}
