--- a/subconverter/Nexitally.ini
+++ b/subconverter/Nexitally.ini
@@ -94,12 +94,14 @@ emoji=(台湾|台|台北|台中|新北|彰化|TW|Taiwan),🇨🇳
 emoji=(阿联酋|迪拜|AE|United Arab Emirates),🇦🇪
 emoji=(阿尔巴尼亚|AL|Albania),🇦🇱
 emoji=(阿根廷|AR|Argentina),🇦🇷
+emoji=(亚美尼亚|Armenia),🇦🇲
 emoji=(奥地利|奧地利|AT|Austria),🇦🇹
 emoji=(澳大利亚|澳洲|澳|悉尼|AU|Australia|Sydney),🇦🇺
 emoji=(阿塞拜疆|AZ|Azerbaijan),🇦🇿
 emoji=(波黑|波斯尼亚和黑塞哥维那|BA|Bosnia & Herzegovina),🇧🇦
 emoji=(孟加拉|BD|Bangladesh),🇧🇩
 emoji=(比利时|比利時|BE|Belgium),🇧🇪
+emoji=(巴林|BH|Bahrain),🇧🇭
 emoji=(保加利亚|Bulgaria),🇧🇬
 emoji=(巴西|圣保罗|BR|Brazil),🇧🇷
 emoji=(白俄罗斯|BY|Belarus),🇧🇾
@@ -112,6 +114,7 @@ emoji=(塞浦路斯|CY|Cyprus),🇨🇾
 emoji=(捷克|布拉格|CZ|Czech),🇨🇿
 emoji=(德国|法兰克福|DE|Germany),🇩🇪
 emoji=(丹麦|丹|哥本哈根|DN|Danmark),🇩🇰
+emoji=(厄瓜多尔|EC|Ecuador),🇪🇨
 emoji=(爱沙尼亚|EE|Estonia),🇪🇪
 emoji=(埃及|开罗|EG|Egypt),🇪🇬
 emoji=(西班牙|马德里|ES|Spain),🇪🇸
@@ -157,7 +160,9 @@ emoji=(秘鲁|PE|Peru),🇵🇪
 emoji=(菲律宾|菲|马尼拉|PH|Philippines),🇵🇭
 emoji=(巴基斯坦|PK|Pakistan),🇵🇰
 emoji=(波兰|波蘭|PO|Poland),🇵🇱
-emoji=(葡萄牙|PT|Portugal),🇵🇹
+emoji=(葡萄牙|Portugal),🇵🇹
+emoji=(波多黎各|PR|Puerto Rico),🇵🇷
+emoji=(巴拉圭|Paraguay),🇵🇾
 emoji=(罗马尼亚|RO|Romania),🇷🇴
 emoji=(塞尔维亚|RS|Serbia),🇷🇸
 emoji=(俄罗斯|俄|伯力|莫斯科|圣彼得堡|西伯利亚|RU|Russia),🇷🇺
