--- a/subconverter/WestData.ini
+++ b/subconverter/WestData.ini
@@ -200,6 +200,7 @@ rename_node=Brazil@巴西
 rename_node=Germany@德国
 rename_node=Korea@韩国
 rename_node=Italy@意大利
+rename_node=Spain@西班牙
 rename_node=Chile@智利
 rename_node=Thailand@泰国
 rename_node=Philippines@菲律宾
