--- a/subconverter/CreamData.ini
+++ b/subconverter/CreamData.ini
@@ -87,100 +87,264 @@ custom_proxy_group=KR`url-test`(?=.*(韩|首尔|KR|Korea))^((?!(NTT|KT)).)*$`htt
 add_emoji=true
 remove_old_emoji=true
 emoji=(流量|时间|应急|0 GB|Traffic|Expire),🧭
-emoji=(中国|广州|China|GCX),🇨🇳
-emoji=(香港|港|HK|Hong Kong),🇭🇰
-emoji=(澳门|澳門|MO|MAC|Macao),🇲🇴
+emoji=(中国|China),🇨🇳
+emoji=(香港|HK|Hong Kong),🇭🇰
+emoji=(澳门|MO|Macao|Macau),🇲🇴
 emoji=(台湾|台|台北|台中|新北|彰化|TW|Taiwan),🇨🇳
-emoji=(阿联酋|迪拜|AE|United Arab Emirates),🇦🇪
-emoji=(阿尔巴尼亚|AL|Albania),🇦🇱
-emoji=(阿根廷|AR|Argentina),🇦🇷
+emoji=(阿森松岛|Ascension Island),🏴󠁧󠁢󠁥󠁮󠁧󠁿
+emoji=(安道尔|Andorra),🇦🇩
+emoji=(阿联酋|迪拜|United Arab Emirates),🇦🇪
+emoji=(阿富汗|Afghanistan),🇦🇫
+emoji=(安提瓜和巴布达|Antigua and Barbuda),🇦🇬
+emoji=(安圭拉|Anguilla),🇦🇮
+emoji=(阿尔巴尼亚|Albania),🇦🇱
 emoji=(亚美尼亚|Armenia),🇦🇲
-emoji=(奥地利|奧地利|AT|Austria),🇦🇹
-emoji=(澳大利亚|澳洲|澳|悉尼|AU|Australia|Sydney),🇦🇺
-emoji=(阿塞拜疆|AZ|Azerbaijan),🇦🇿
-emoji=(波黑|波斯尼亚和黑塞哥维那|BA|Bosnia & Herzegovina),🇧🇦
-emoji=(孟加拉|BD|Bangladesh),🇧🇩
-emoji=(比利时|比利時|BE|Belgium),🇧🇪
-emoji=(巴林|BH|Bahrain),🇧🇭
+emoji=(安哥拉|Angola),🇦🇴
+emoji=(阿根廷|Argentina),🇦🇷
+emoji=(美属萨摩亚|American Samoa),🇦🇸
+emoji=(奥地利|Austria),🇦🇹
+emoji=(澳大利亚|澳洲|澳|悉尼|珀斯|墨尔本|布里斯班|阿德莱德|AU|Australia|Sydney),🇦🇺
+emoji=(阿鲁巴|Aruba),🇦🇼
+emoji=(奥兰群岛|Åland Islands),🇦🇽
+emoji=(阿塞拜疆|Azerbaijan),🇦🇿
+emoji=(波黑|波斯尼亚和黑塞哥维那|Bosnia and Herzegovina),🇧🇦
+emoji=(巴巴多斯|Barbados),🇧🇧
+emoji=(孟加拉|Bangladesh),🇧🇩
+emoji=(比利时|Belgium),🇧🇪
+emoji=(布基纳法索|Burkina Faso),🇧🇫
 emoji=(保加利亚|Bulgaria),🇧🇬
-emoji=(巴西|圣保罗|BR|Brazil),🇧🇷
-emoji=(白俄罗斯|BY|Belarus),🇧🇾
-emoji=(加拿大|蒙特利尔|温哥华|CA|Canada),🇨🇦
-emoji=(瑞士|CH|Switzerland),🇨🇭
-emoji=(智利|圣地亚哥|CL|Chile),🇨🇱
-emoji=(哥伦比亚|圣地亚哥|CO|Colombia),🇨🇴
-emoji=(哥斯达黎加|CR|Costa Rica),🇨🇷 
-emoji=(塞浦路斯|CY|Cyprus),🇨🇾
-emoji=(捷克|布拉格|CZ|Czech),🇨🇿
-emoji=(德国|法兰克福|DE|Germany),🇩🇪
-emoji=(丹麦|丹|哥本哈根|DN|Danmark),🇩🇰
-emoji=(厄瓜多尔|EC|Ecuador),🇪🇨
-emoji=(爱沙尼亚|EE|Estonia),🇪🇪
-emoji=(埃及|开罗|EG|Egypt),🇪🇬
-emoji=(西班牙|马德里|ES|Spain),🇪🇸
-emoji=(芬兰|芬蘭|巴黎|FI|Finland),🇫🇮
-emoji=(法国|法|巴黎|FR|France),🇫🇷
-emoji=(英国|英|伦敦|UK|GBR|England|United Kingdom),🇬🇧
-emoji=(格鲁吉亚|GE|Georgia),🇬🇪
-emoji=(希腊|希臘|雅典|GR|Greece),🇬🇷
-emoji=(克罗地亚|HR|Croatia),🇭🇷
-emoji=(匈牙利|HU|Hungary),🇭🇺
-emoji=(印度尼西亚|印尼|雅加达|ID|Indonesia),🇮🇩
-emoji=(爱尔兰|愛爾蘭|都柏林|Ireland),🇮🇪
-emoji=(以色列|耶路撒冷|IL|Israel),🇮🇱
-emoji=(马恩岛|馬恩島|IM|Mann),🇮🇲
-emoji=(伊朗|IR|Iran),🇮🇷
-emoji=(冰岛|冰島|雷克雅未克|IS|Iceland),🇮🇸
-emoji=(意大利|意|米兰|IT|Italy),🇮🇹
-emoji=(印度|印|孟买|新德里|IND|India),🇮🇳
-emoji=(约旦|JO|Jordan),🇯🇴
+emoji=(巴林|Bahrain),🇧🇭
+emoji=(布隆迪|Burundi),🇧🇮
+emoji=(贝宁|Benin),🇧🇯
+emoji=(圣巴泰勒米|Saint Barthélemy),🇧🇱
+emoji=(百慕大|Bermuda),🇧🇲
+emoji=(文莱|Brunei),🇧🇳
+emoji=(玻利维亚|Bolivia),🇧🇴
+emoji=(荷兰加勒比区|Caribbean Netherlands),🇧🇶
+emoji=(巴西|Brazil),🇧🇷
+emoji=(巴哈马|Bahamas),🇧🇸
+emoji=(不丹|Bhutan),🇧🇹
+emoji=(布维岛|Bouvet Island),🇧🇻
+emoji=(博茨瓦纳|Botswana),🇧🇼
+emoji=(白俄罗斯|Belarus),🇧🇾
+emoji=(伯利兹|Belize),🇧🇿
+emoji=(加拿大|Canada),🇨🇦
+emoji=(科科斯(基林）群岛|Cocos (Keeling) Islands),🇨🇨
+emoji=(刚果(金）|Congo (Kinshasa)),🇨🇩
+emoji=(中非共和国|Central African Republic),🇨🇫
+emoji=(刚果(布）|Congo (Brazzaville)),🇨🇬
+emoji=(瑞士|Switzerland),🇨🇭
+emoji=(科特迪瓦|Ivory Coast),🇨🇮
+emoji=(库克群岛|Cook Islands),🇨🇰
+emoji=(智利|Chile),🇨🇱
+emoji=(喀麦隆|Cameroon),🇨🇲
+emoji=(哥伦比亚|Colombia),🇨🇴
+emoji=(克利珀顿岛|Clipperton Island),🇫🇷
+emoji=(哥斯达黎加|Costa Rica),🇨🇷
+emoji=(古巴|Cuba),🇨🇺
+emoji=(佛得角|Cape Verde),🇨🇻
+emoji=(库拉索|Curaçao),🇨🇼
+emoji=(圣诞岛|Christmas Island),🇨🇽
+emoji=(塞浦路斯|Cyprus),🇨🇾
+emoji=(捷克|Czech Republic),🇨🇿
+emoji=(德国|Germany),🇩🇪
+emoji=(迪戈加西亚岛|Diego Garcia),🇩🇬
+emoji=(吉布提|Djibouti),🇩🇯
+emoji=(丹麦|Denmark),🇩🇰
+emoji=(多米尼克|Dominica),🇩🇲
+emoji=(多米尼加|Dominican Republic),🇩🇴
+emoji=(阿尔及利亚|Algeria),🇩🇿
+emoji=(休达及梅利利亚|Ceuta & Melilla),🇪🇦
+emoji=(厄瓜多尔|Ecuador),🇪🇨
+emoji=(爱沙尼亚|Estonia),🇪🇪
+emoji=(埃及|Egypt),🇪🇬
+emoji=(西撒哈拉|Western Sahara),🇪🇭
+emoji=(厄立特里亚|Eritrea),🇪🇷
+emoji=(西班牙|Spain),🇪🇸
+emoji=(埃塞俄比亚|Ethiopia),🇪🇹
+emoji=(芬兰|Finland),🇫🇮
+emoji=(斐济|Fiji),🇫🇯
+emoji=(福克兰群岛|Falkland Islands),🇫🇰
+emoji=(密克罗尼西亚|Micronesia),🇫🇲
+emoji=(法罗群岛|Faroe Islands),🇫🇴
+emoji=(法国|巴黎|FR|France),🇫🇷
+emoji=(加蓬|Gabon),🇬🇦
+emoji=(英国|伦敦|UK|GBR|England|United Kingdom|London|Coventry),🇬🇧
+emoji=(格林纳达|Grenada),🇬🇩
+emoji=(格鲁吉亚|Georgia),🇬🇪
+emoji=(法属圭亚那|French Guiana),🇬🇫
+emoji=(根西岛|Guernsey),🇬🇬
+emoji=(加纳|Ghana),🇬🇭
+emoji=(直布罗陀|Gibraltar),🇬🇮
+emoji=(格陵兰|Greenland),🇬🇱
+emoji=(冈比亚|Gambia),🇬🇲
+emoji=(几内亚|Guinea),🇬🇳
+emoji=(瓜德罗普|Guadeloupe),🇬🇵
+emoji=(赤道几内亚|Equatorial Guinea),🇬🇶
+emoji=(希腊|Greece),🇬🇷
+emoji=(南乔治亚和南桑威奇群岛|South Georgia & South Sandwich Islands),🇬🇸
+emoji=(危地马拉|Guatemala),🇬🇹
+emoji=(关岛|Guam),🇬🇺
+emoji=(几内亚比绍|Guinea-Bissau),🇬🇼
+emoji=(圭亚那|Guyana),🇬🇾
+emoji=(赫德岛和麦克唐纳群岛|Heard & McDonald Islands),🇭🇲
+emoji=(洪都拉斯|Honduras),🇭🇳
+emoji=(克罗地亚|Croatia),🇭🇷
+emoji=(海地|Haiti),🇭🇹
+emoji=(匈牙利|Hungary),🇭🇺
+emoji=(加纳利群岛|Canary Islands),🇮🇨
+emoji=(印度尼西亚|印尼|雅加达|棉兰|ID|Indonesia),🇮🇩
+emoji=(爱尔兰|Ireland),🇮🇪
+emoji=(以色列|Israel),🇮🇱
+emoji=(马恩岛|Isle of Man),🇮🇲
+emoji=(印度|孟买|新德里|India),🇮🇳
+emoji=(英属印度洋领地|British Indian Ocean Territory),🇮🇴
+emoji=(伊拉克|Iraq),🇮🇶
+emoji=(伊朗|Iran),🇮🇷
+emoji=(冰岛|Iceland),🇮🇸
+emoji=(意大利|Italy),🇮🇹
+emoji=(泽西岛|Jersey),🇯🇪
+emoji=(牙买加|Jamaica),🇯🇲
+emoji=(约旦|Jordan),🇯🇴
 emoji=(日本|东京|大阪|埼玉|深日|穗日|沪日|京日|泉日|川日|JP|Japan),🇯🇵
-emoji=(肯尼亚|KE|Kenya),🇰🇪
-emoji=(吉尔吉斯斯坦|KG|Kyrgyzstan),🇰🇬
-emoji=(柬埔寨|金边|KH|Kampuchea|Cambodia),🇰🇭
-emoji=(科索沃|Kosovo),🇽🇰
-emoji=(韩国|韩|韓|首尔|KR|KOR|Korea),🇰🇷
-emoji=(哈萨克斯坦|哈薩克斯坦|努尔苏丹|KZ|Kazakhstan),🇰🇿
-emoji=(立陶宛|LT|Lithuania),🇱🇹
-emoji=(卢森堡|盧森堡|LU|Luxembourg),🇱🇺
-emoji=(拉脱维亚|LV|Latvija),🇱🇻
-emoji=(摩洛哥|MA|Morocco),🇲🇦
-emoji=(摩尔多瓦|MD|Moldova),🇲🇩
-emoji=(北马其顿|MK|North Macedonia),🇲🇰
-emoji=(蒙古|MN|Mongolia),🇲🇳
-emoji=(墨西哥|MX|Mexico),🇲🇽
+emoji=(肯尼亚|Kenya),🇰🇪
+emoji=(吉尔吉斯斯坦|Kyrgyzstan),🇰🇬
+emoji=(柬埔寨|Cambodia),🇰🇭
+emoji=(基里巴斯|Kiribati),🇰🇮
+emoji=(科摩罗|Comoros),🇰🇲
+emoji=(圣基茨和尼维斯|Saint Kitts and Nevis),🇰🇳
+emoji=(朝鲜|North Korea),🇰🇵
+emoji=(韩国|South Korea|Korea),🇰🇷
+emoji=(科威特|Kuwait),🇰🇼
+emoji=(开曼群岛|Cayman Islands),🇰🇾
+emoji=(哈萨克斯坦|Kazakhstan),🇰🇿
+emoji=(老挝|寮國|Laos),🇱🇦
+emoji=(黎巴嫩|Lebanon),🇱🇧
+emoji=(圣卢西亚|Saint Lucia),🇱🇨
+emoji=(列支敦士登|Liechtenstein),🇱🇮
+emoji=(斯里兰卡|Sri Lanka),🇱🇰
+emoji=(利比里亚|Liberia),🇱🇷
+emoji=(莱索托|Lesotho),🇱🇸
+emoji=(立陶宛|Lithuania),🇱🇹
+emoji=(卢森堡|Luxembourg),🇱🇺
+emoji=(拉脱维亚|Latvia),🇱🇻
+emoji=(利比亚|Libya),🇱🇾
+emoji=(摩洛哥|Morocco),🇲🇦
+emoji=(摩纳哥|Monaco),🇲🇨
+emoji=(摩尔多瓦|Moldova),🇲🇩
+emoji=(黑山|Montenegro),🇲🇪
+emoji=(法属圣马丁|Saint Martin),🇲🇫
+emoji=(马达加斯加|Madagascar),🇲🇬
+emoji=(马绍尔群岛|Marshall Islands),🇲🇭
+emoji=(北马其顿|North Macedonia),🇲🇰
+emoji=(马里|Mali),🇲🇱
+emoji=(缅甸|Myanmar),🇲🇲
+emoji=(蒙古|Mongolia),🇲🇳
+emoji=(北马里亚纳群岛|Northern Mariana Islands),🇲🇵
+emoji=(马提尼克|Martinique),🇲🇶
+emoji=(毛里塔尼亚|Mauritania),🇲🇷
+emoji=(蒙特塞拉特|Montserrat),🇲🇸
+emoji=(马耳他|Malta),🇲🇹
+emoji=(毛里求斯|Mauritius),🇲🇺
+emoji=(马尔代夫|Maldives),🇲🇻
+emoji=(马拉维|Malawi),🇲🇼
+emoji=(墨西哥|Mexico),🇲🇽
 emoji=(马来西亚|马来|大马|MY|Malaysia),🇲🇾
-emoji=(尼日利亚|NG|Nigeria),🇳🇬
+emoji=(莫桑比克|Mozambique),🇲🇿
+emoji=(纳米比亚|Namibia),🇳🇦
+emoji=(新喀里多尼亚|New Caledonia),🇳🇨
+emoji=(尼日尔|Niger),🇳🇪
+emoji=(诺福克岛|Norfolk Island),🇳🇫
+emoji=(尼日利亚|Nigeria),🇳🇬
+emoji=(尼加拉瓜|Nicaragua),🇳🇮
 emoji=(荷兰|尼德兰|阿姆斯特丹|NL|Netherlands),🇳🇱
-emoji=(挪威|NO|Norway),🇳🇴
-emoji=(尼泊尔|NP|Nepal),🇳🇵
-emoji=(新西兰|新西蘭|NZ|New Zealand),🇳🇿
-emoji=(巴拿马|PA|Panama),🇵🇦
-emoji=(秘鲁|PE|Peru),🇵🇪
-emoji=(菲律宾|菲|马尼拉|PH|Philippines),🇵🇭
-emoji=(巴基斯坦|PK|Pakistan),🇵🇰
-emoji=(波兰|波蘭|PO|Poland),🇵🇱
+emoji=(挪威|Norway),🇳🇴
+emoji=(尼泊尔|Nepal),🇳🇵
+emoji=(瑙鲁|Nauru),🇳🇷
+emoji=(纽埃|Niue),🇳🇺
+emoji=(新西兰|New Zealand),🇳🇿
+emoji=(阿曼|Oman),🇴🇲
+emoji=(巴拿马|Panama),🇵🇦
+emoji=(秘鲁|Peru),🇵🇪
+emoji=(法属波利尼西亚|French Polynesia),🇵🇫
+emoji=(巴布亚新几内亚|Papua New Guinea),🇵🇬
+emoji=(菲律宾|菲|马尼拉|克拉克|帕西格|PH|Philippines),🇵🇭
+emoji=(巴基斯坦|Pakistan),🇵🇰
+emoji=(波兰|Poland),🇵🇱
+emoji=(法属圣皮埃尔和密克隆群岛|Saint Pierre & Miquelon),🇵🇲
+emoji=(皮特凯恩群岛|Pitcairn Islands),🇵🇳
+emoji=(波多黎各|Puerto Rico),🇵🇷
+emoji=(巴勒斯坦|Palestinian Territories),🇵🇸
 emoji=(葡萄牙|Portugal),🇵🇹
-emoji=(波多黎各|PR|Puerto Rico),🇵🇷
+emoji=(帕劳|Palau),🇵🇼
 emoji=(巴拉圭|Paraguay),🇵🇾
-emoji=(罗马尼亚|RO|Romania),🇷🇴
-emoji=(塞尔维亚|RS|Serbia),🇷🇸
-emoji=(俄罗斯|俄|伯力|莫斯科|圣彼得堡|西伯利亚|RU|Russia),🇷🇺
+emoji=(卡塔尔|Qatar),🇶🇦
+emoji=(留尼汪|Réunion),🇷🇪
+emoji=(罗马尼亚|Romania),🇷🇴
+emoji=(塞尔维亚|Serbia),🇷🇸
+emoji=(俄罗斯|俄|莫斯科|叶卡捷琳堡|伯力|圣彼得堡|西伯利亚|RU|Russia),🇷🇺
+emoji=(卢旺达|Rwanda),🇷🇼
 emoji=(沙特阿拉伯|沙特|Saudi Arabia),🇸🇦
-emoji=(瑞典|SE|Sweden),🇸🇪
+emoji=(所罗门群岛|Solomon Islands),🇸🇧
+emoji=(塞舌尔|Seychelles),🇸🇨
+emoji=(苏丹|Sudan),🇸🇩
+emoji=(瑞典|Sweden),🇸🇪
 emoji=(新加坡|新|狮城|SG|Singapore),🇸🇬
-emoji=(斯洛文尼亚|SI|Slovenia),🇸🇮
-emoji=(斯洛伐克|SK|Slovensko),🇸🇰
-emoji=(泰国|泰|曼谷|TH|Thailand),🇹🇭
-emoji=(突尼斯|TN|Tunisia),🇹🇳
-emoji=(土耳其|伊斯坦布尔|TR|Turkey),🇹🇷
-emoji=(乌克兰|烏克蘭|UA|Ukraine),🇺🇦
+emoji=(圣赫勒拿|Saint Helena),🇸🇭
+emoji=(斯洛文尼亚|Slovenia),🇸🇮
+emoji=(斯瓦尔巴和扬马延|Svalbard & Jan Mayen),🇸🇯
+emoji=(斯洛伐克|Slovakia),🇸🇰
+emoji=(塞拉利昂|Sierra Leone),🇸🇱
+emoji=(圣马力诺|San Marino),🇸🇲
+emoji=(塞内加尔|Senegal),🇸🇳
+emoji=(索马里|Somalia),🇸🇴
+emoji=(苏里南|Suriname),🇸🇷
+emoji=(南苏丹|South Sudan),🇸🇸
+emoji=(圣多美和普林西比|São Tomé & Príncipe),🇸🇹
+emoji=(萨尔瓦多|El Salvador),🇸🇻
+emoji=(荷属圣马丁|Sint Maarten),🇸🇽
+emoji=(叙利亚|Syria),🇸🇾
+emoji=(斯威士兰|Eswatini),🇸🇿
+emoji=(特里斯坦达库尼亚|Tristan da Cunha),🇹🇦
+emoji=(特克斯和凯科斯群岛|Turks & Caicos Islands),🇹🇨
+emoji=(乍得|Chad),🇹🇩
+emoji=(法属南部领地|French Southern Territories),🇹🇫
+emoji=(多哥|Togo),🇹🇬
+emoji=(泰国|Thailand),🇹🇭
+emoji=(塔吉克斯坦|Tajikistan),🇹🇯
+emoji=(托克劳|Tokelau),🇹🇰
+emoji=(东帝汶|Timor-Leste),🇹🇱
+emoji=(土库曼斯坦|Turkmenistan),🇹🇲
+emoji=(突尼斯|Tunisia),🇹🇳
+emoji=(汤加|Tonga),🇹🇴
+emoji=(土耳其|Turkey),🇹🇷
+emoji=(特立尼达和多巴哥|Trinidad & Tobago),🇹🇹
+emoji=(图瓦卢|Tuvalu),🇹🇻
+emoji=(坦桑尼亚|Tanzania),🇹🇿
+emoji=(乌克兰|Ukraine),🇺🇦
+emoji=(乌干达|Uganda),🇺🇬
+emoji=(美国本土外小岛屿|U.S. Outlying Islands),🇺🇲
+emoji=(美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|亚特兰大|夏威夷|底特律|费城|丹佛|US|USA|America|United States|Seattle|San Jose),🇺🇸
+emoji=(乌拉圭|Uruguay),🇺🇾
+emoji=(乌兹别克斯坦|Uzbekistan),🇺🇿
+emoji=(梵蒂冈|Vatican City),🇻🇦
+emoji=(圣文森特和格林纳丁斯|Saint Vincent & Grenadines),🇻🇨
 emoji=(委内瑞拉|Venezuela),🇻🇪
-emoji=(越南|VN|Vietnam),🇻🇳
-emoji=(美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|USA|America|United States),🇺🇸
-emoji=(乌拉圭|UY|Uruguay),🇺🇾
-emoji=(南非|ZA|South Africa),🇿🇦
-emoji=(欧洲|欧盟),🇪🇺
+emoji=(英属维尔京|British Virgin Islands),🇻🇬
+emoji=(美属维尔京|U.S. Virgin Islands),🇻🇮
+emoji=(越南|Vietnam),🇻🇳
+emoji=(瓦努阿图|Vanuatu),🇻🇺
+emoji=(瓦利斯和富图纳|Wallis & Futuna),🇼🇫
+emoji=(萨摩亚|Samoa),🇼🇸
+emoji=(科索沃|Kosovo),🇽🇰
+emoji=(也门|Yemen),🇾🇪
+emoji=(特里斯坦-达库尼亚|Tristan da Cunha),🇾🇹
+emoji=(南非|South Africa),🇿🇦
+emoji=(赞比亚|Zambia),🇿🇲
+emoji=(津巴布韦|Zimbabwe),🇿🇼
+emoji=(欧洲|欧盟|Europe|European Union),🇪🇺
+emoji=(南极|Antarctica),🇦🇶
+emoji=(联合国|United Nations),🇺🇳
 
 ;重命名 node
 exclude_remarks=(流量|时间|官网|产品|用户|请使用|Bandwidth|Expire)
