--- a/Clash/Ruleset/Cryptocurrency.yaml
+++ b/Clash/Ruleset/Cryptocurrency.yaml
@@ -1,22 +1,28 @@
-DOMAIN-SUFFIX, aex.com
-DOMAIN-SUFFIX, bibox.com
-DOMAIN-SUFFIX, binance.im
-DOMAIN-SUFFIX, binance.cc
-DOMAIN-SUFFIX, binance.com
-DOMAIN-SUFFIX, binance.cloud
-DOMAIN-SUFFIX, bitcointalk.org
-DOMAIN-SUFFIX, bitfinex.com
-DOMAIN-SUFFIX, bitmex.com
-DOMAIN-SUFFIX, ftx.com
-DOMAIN-SUFFIX, gate.io
-DOMAIN-SUFFIX, huobi.com
-DOMAIN-SUFFIX, okex.com
-DOMAIN-SUFFIX, sushi.com
-DOMAIN-SUFFIX, uniswap.org
-DOMAIN-SUFFIX, zb.com
-DOMAIN-SUFFIX, coingecko.com
-DOMAIN-SUFFIX, api.coingecko.com
-DOMAIN-SUFFIX, congecko.com
-DOMAIN-SUFFIX, kucoin.com
-DOMAIN-SUFFIX, xcoinsystem.com
-DOMAIN-SUFFIX, kucoin.center
+payload:
+  - DOMAIN-SUFFIX, aex.com
+  - DOMAIN-SUFFIX, bibox.com
+  - DOMAIN-SUFFIX, binance.im
+  - DOMAIN-SUFFIX, binance.cc
+  - DOMAIN-SUFFIX, binance.com
+  - DOMAIN-SUFFIX, binance.cloud
+  - DOMAIN-SUFFIX, bitcointalk.org
+  - DOMAIN-SUFFIX, bitfinex.com
+  - DOMAIN-SUFFIX, bitmex.com
+  - DOMAIN-SUFFIX, ftx.com
+  - DOMAIN-SUFFIX, gate.io
+  - DOMAIN-SUFFIX, huobi.com
+  - DOMAIN-SUFFIX, okex.com
+  - DOMAIN-SUFFIX, sushi.com
+  - DOMAIN-SUFFIX, uniswap.org
+  - DOMAIN-SUFFIX, zb.com
+  - DOMAIN-SUFFIX, coingecko.com
+  - DOMAIN-SUFFIX, api.coingecko.com
+  - DOMAIN-SUFFIX, congecko.com
+  - DOMAIN-SUFFIX, kucoin.com
+  - DOMAIN-SUFFIX, xcoinsystem.com
+  - DOMAIN-SUFFIX, kucoin.center
+  - DOMAIN-SUFFIX, htx.com
+  - DOMAIN-SUFFIX, huobi.ug
+  - DOMAIN-SUFFIX, huobi.com.bo
+  - DOMAIN-SUFFIX, huobi.info
+  - DOMAIN-SUFFIX, huobihk.com
