--- a/Clash/Ruleset/Turkey.yaml
+++ b/Clash/Ruleset/Turkey.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN-SUFFIX,mtcgame.com
+  - DOMAIN-SUFFIX,oyunfor.com
   - DOMAIN-SUFFIX,turgame.com
   - DOMAIN-SUFFIX,eturkcell.netmera.com
   - DOMAIN-SUFFIX,com.tr
